--- a/services.html
+++ b/services.html
@@ -114,7 +114,7 @@
 <h3>CUSTOMS CLEARANCE</h3>
 <img src="port3.jpg" alt="home delivery">
       <p><span style="font-size: 40px;">W</span>​e have the experience and skills necessary to tackle just about every type of job that comes our way. With Fortune Express Enterprise, clients know exactly what to expect - professionalism, efficiency and exceptional results.</p>
-    </div>
+    </div> <br><br>
     <div class="marine">
       <h3>MARINE INSUARANCE</h3> 
  <img src="company-project3.jpg" alt="">
