--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Fortune Express | Global Shipping Company</title>
+  <title>UpFront Xpress | Global Logistic Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>Fortune</span> Express</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>Upfront</span> Xpress</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -56,7 +56,7 @@
               <li><a href="about.html" class="active">About Us</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Professional Services</span> <i class="bi bi-chevron-right"></i></a>
+              <li class="dropdown"><a href="services.html"><span>Professional Services</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                    <li><a href="services.html">Home Delivery</a></li>
                   <li><a href="services.html">Customs Clearance</a></li>
@@ -108,24 +108,24 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right">
-            <h2>Our well oriented driven goals</h2>
-            <h3>Fortune Express Freight is an Independent Provider of Cargo Security Solutions for the transportation Industry. Our mission is to provide innovative , first rate ,comprehensive and competitive solutions to ensure the safety and security of our client's cargo and aircraft. We are focused on delivering quality services that comes with commitment and experience.</h3>
+            <h2 style="font-size: 30px;">Our well oriented driven goals</h2>
+            <h3 style="font-size: 20px;">UpFront Xpress Freight is an Independent Provider of Cargo Security Solutions for the transportation Industry. Our mission is to provide innovative , first rate ,comprehensive and competitive solutions to ensure the safety and security of our client's cargo and aircraft. We are focused on delivering quality services that comes with commitment and experience.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
             <p>
-              With Fortune Express you get clear visibility of your shipment's journey. You can book your cargo from warehouse to warehouse, port to port or other combinations. Whatever you choose, we make sure you can track your cargo along the way and stay up to date on its status.
+              With UpFront Xpress you get clear visibility of your shipment's journey. You can book your cargo from warehouse to warehouse, port to port or other combinations. Whatever you choose, we make sure you can track your cargo along the way and stay up to date on its status.
 
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> One place to manage all your shipments and tasks.</li>
-              <li><i class="ri-check-double-line"></i> Fortune Express Customs Clearance Services facilitate your freight assuring you an effortless and secure customs clearance process.</li>
+              <li><i class="ri-check-double-line"></i> UpFront Xpress Customs Clearance Services facilitate your freight assuring you an effortless and secure customs clearance process.</li>
               <li><i class="ri-check-double-line"></i> Take control of your logistics with monthly fixed rates.</li>
             </ul>
             <p class="fst-italic">
               Inland Transportation
 Cover your end-to-end logistics with Inland Transportation
 
-Inland transportation is a key partner to ocean freight and with Fortune Express, you get access to a range of quality intermodal services – whether truck, rail or barge. Find the right transport mode for your cargo and let us handle the rest.
+Inland transportation is a key partner to ocean freight and with UpFront Xpress, you get access to a range of quality intermodal services – whether truck, rail or barge. Find the right transport mode for your cargo and let us handle the rest.
         
             </p>
           </div>
@@ -140,7 +140,7 @@ Inland transportation is a key partner to ocean freight and with Fortune Express
 
         <div class="section-title" data-aos="fade-up">
           <h2>Our<strong> Dedicated</strong><strong> Team</strong></h2>
-         <p>Fortune Express is a Shipping Company Enterprise that positions ourselves as an extension of their clients' Cargo transportation to their various destinations with ease. For that reason, we showcase the people on their staff to highlight the humans behind those wonderful achievements.</p>
+         <p>UpFront Xpress is a Shipping Company Enterprise that positions ourselves as an extension of their clients' Cargo transportation to their various destinations with ease. For that reason, we showcase the people on their staff to highlight the humans behind those wonderful achievements.</p>
         </div>
 
         <div class="row">
@@ -350,11 +350,10 @@ Inland transportation is a key partner to ocean freight and with Fortune Express
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Fortune Express</h3>
+            <h3>UpFront Xpress</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Dnata City Unit 1 <br>
+              Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> brightjunior475@gmail.com<br>
             </p>
@@ -398,14 +397,14 @@ Inland transportation is a key partner to ocean freight and with Fortune Express
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fortune Express Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>UpFront Xpress Logistic</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="index.html">FortuneExpressICT</a>
+          Designed by <a href="index.html">UpFrontXpressICT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
