--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Fortune Express | Global Shipping Company</title>
+  <title>UpFront Xpress | Global Logistic Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>FORTUNE</span>EXPRESS</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -114,7 +114,7 @@
               <h4>Ceo &amp; Founder</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-It is with great relief and happiness that I am writing this letter where Fortune Expresss team members helped our company complete the shipment clearance and delivery to various Distribution Line sites in Uganda since January 2018. 
+It is with great relief and happiness that I am writing this letter where UpFront Xpress team members helped our company complete the shipment clearance and delivery to various Distribution Line sites in Uganda since January 2018. 
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -127,7 +127,7 @@ It is with great relief and happiness that I am writing this letter where Fortun
               <h4>Designer</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-Hi Thomas Peters, I wanted to take the time to write to you and your team to make sure we are recognizing the amazing work that has been delivered over the past 6 months for (our company). We never doubted that Fortune Express was able to handle our business model and make a good association.
+Hi Thomas Peters, I wanted to take the time to write to you and your team to make sure we are recognizing the amazing work that has been delivered over the past 6 months for (our company). We never doubted that Upfront Xpress was able to handle our business model and make a good association.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -140,7 +140,7 @@ Hi Thomas Peters, I wanted to take the time to write to you and your team to mak
               <h4>Store Owner</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-In October of 2018 I was searching for a new shipping Company. Due to the size and weight of our product, moving it and delivering it can be a challenge. We ship both domestically and internationally and I needed a company that could handle all facets of our shipping needs. I happened upon Fortune Express and reached out to them. My only regret is that I did not find them 10 years sooner! William Anderson and his crew in Ontario, CA have been outstanding!
+In October of 2018 I was searching for a new shipping Company. Due to the size and weight of our product, moving it and delivering it can be a challenge. We ship both domestically and internationally and I needed a company that could handle all facets of our shipping needs. I happened upon UpFront Xpress and reached out to them. My only regret is that I did not find them 10 years sooner! William Anderson and his crew in Ontario, CA have been outstanding!
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -153,7 +153,7 @@ In October of 2018 I was searching for a new shipping Company. Due to the size a
               <h4>Freelancer</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-Dear the Fortune Express COVID-19 Response team, We’re so grateful for your generous provision of masks for us to distribute to the homeless through our Bishop’s Breakfast program. Fortune Express has been an amazing support during this pandemic, and this is just one more example. Because of this gift, the homeless population will have more…
+Dear the UpFront Xpress COVID-19 Response team, We’re so grateful for your generous provision of masks for us to distribute to the homeless through our Bishop’s Breakfast program. UpFront Xpress has been an amazing support during this pandemic, and this is just one more example. Because of this gift, the homeless population will have more…
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -166,7 +166,7 @@ Dear the Fortune Express COVID-19 Response team, We’re so grateful for your ge
               <h4>Entrepreneur</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-The Fortune Express platform is easy to use. Looking at the entire process from placing a booking, doing it with Fortune Express saves time, and I can receive timely notifications about each and every step of my shipping through the entire journey.
+The UpFront Xpress platform is easy to use. Looking at the entire process from placing a booking, doing it with Fortune Express saves time, and I can receive timely notifications about each and every step of my shipping through the entire journey.
 
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
@@ -180,7 +180,7 @@ The Fortune Express platform is easy to use. Looking at the entire process from 
               <h4>Store Owner</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                As a novice Amazon Seller, I hired Fortune Express to organize shipping an FCL from Shenzhen China to Dallas TX. The service has been nothing short of excellent from start to finish. The container was unloaded at the Fortune Express warehouse where products had to be sorted & repalletized for Amazon.
+                As a novice Amazon Seller, I hired UpFront Xpress to organize shipping an FCL from Shenzhen China to Dallas TX. The service has been nothing short of excellent from start to finish. The container was unloaded at the UpFront Xpress warehouse where products had to be sorted & repalletized for Amazon.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -201,11 +201,10 @@ The Fortune Express platform is easy to use. Looking at the entire process from 
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Fortune Express</h3>
+            <h3>UpFront Xpress</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Dnata City Unit 1 <br>
+              Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> brightjunior475@gmail.com<br>
             </p>
@@ -249,14 +248,14 @@ The Fortune Express platform is easy to use. Looking at the entire process from 
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fortune Express Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>UpFront Xpress Logistic</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a href="index.html">UpFrontXpressICT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
