--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fortune Express | Global Shipping Company</title>
+  <title>UpFront Xpress | Global Logistic Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>Fortune</span> Express</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -106,7 +106,7 @@
 
     <!-- ======= Contact Section ======= -->
     <div class="map-section">
-      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9945.185825410967!2d-0.4896157979965126!3d51.452713229012275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487673df31e71fa3%3A0x5071c2721cd16d98!2sDnata%20City%20Unit%201!5e0!3m2!1sen!2sng!4v1624742782221!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
     <section id="contact" class="contact">
@@ -121,7 +121,9 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <p>Dnata City Unit 1 <br>
+                  Stanwell, Staines TW19 7LN, <br> United Kingdom
+</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -183,11 +185,10 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Fortune Express</h3>
+            <h3>UpFront Xpress</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Dnata City Unit 1 <br>
+              Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> brightjunior475@gmail.com<br>
             </p>
@@ -231,14 +232,14 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fortune Express Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>UpFront Xpress Logistic</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="index.html">FortuneExpressICT</a>
+          Designed by <a href="index.html">UpFrontXpressICT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
