--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fortune Express | Global Shipping Company</title>
+  <title>UpFront Xpress | Global Logistic Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>FORTUNE</span> EXPRESS</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -100,7 +100,7 @@
         <div class="carousel-item active" style="background-image: url(slide2.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Welcome to <span>FORTUNE EXPRESS ENTERPRISE</span></h2>
+              <h2>Welcome to <span>UPFRONT XPRESS LOGISTIC</span></h2>
               <p>We make it easy to manage your shipments and logistics online. From finding a price and making bookings to submitting documents and tracking cargo.</p>
               <div class="text-center"><a href="about.html" class="btn-get-started">Read More</a></div>
             </div>
@@ -112,7 +112,7 @@
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>OCEAN FREIGHT</h2>
-              <p>Take your ocean freight across the world with our shipping services <br>With shipping services from over 300 ports, Fortune Express Enterprise enables small and medium-sized businesses to grow. We not only connect your business globally, but also simplify your end-to-end logistics in the process.</p>
+              <p>Take your ocean freight across the world with our shipping services <br>With shipping services from over 300 ports, UpFront Xpress Logistic enables small and medium-sized businesses to grow. We not only connect your business globally, but also simplify your end-to-end logistics in the process.</p>
               <div class="text-center"><a href="services.html" class="btn-get-started">Read More</a></div>
             </div>
           </div>
@@ -123,7 +123,7 @@
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Customs Services</h2>
-              <p>Efficient Customs Clearance Services powered by local experience.Fortune Express Customs Clearance Services facilitate your freight assuring you an effortless and secure customs clearance process. Whether you are looking for import or export customs clearance, our experts can guide you through the process.</p>
+              <p>Efficient Customs Clearance Services powered by local experience.UpFront Xpress Customs Clearance Services facilitate your freight assuring you an effortless and secure customs clearance process. Whether you are looking for import or export customs clearance, our experts can guide you through the process.</p>
               <div class="text-center"><a href="services.html" class="btn-get-started">Read More</a></div>
             </div>
           </div>
@@ -153,24 +153,24 @@
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right">
             <h2>ABOUT US</h2>
-            <h5>Fortune Express Freight is an Independent Provider of Cargo Security Solutions for the transportation Industry. Our mission is to provide innovative , first rate ,comprehensive and competitive solutions to ensure the safety and security of our client's cargo and aircraft. We are focused on delivering quality services that comes with commitment and experience.</h5>
+            <h5>UpFront Xpress Freight is an Independent Provider of Cargo Security Solutions for the transportation Industry. Our mission is to provide innovative , first rate ,comprehensive and competitive solutions to ensure the safety and security of our client's cargo and aircraft. We are focused on delivering quality services that comes with commitment and experience.</h5>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
             <p>
             
 
-With Fortune Express you get clear visibility of your shipment's journey. You can book your cargo from warehouse to warehouse, port to port or other combinations. Whatever you choose, we make sure you can track your cargo along the way and stay up to date on its status.
+With UpFront Xpress you get clear visibility of your shipment's journey. You can book your cargo from warehouse to warehouse, port to port or other combinations. Whatever you choose, we make sure you can track your cargo along the way and stay up to date on its status.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> One place to manage all your shipments and tasks.</li>
-              <li><i class="ri-check-double-line"></i> Fortune Express Customs Clearance Services facilitate your freight assuring you an effortless and secure customs clearance process.</li>
+              <li><i class="ri-check-double-line"></i> UpFront Xpress Customs Clearance Services facilitate your freight assuring you an effortless and secure customs clearance process.</li>
               <li><i class="ri-check-double-line"></i> Take control of your logistics with monthly fixed rates.</li>
             </ul>
             <p class="fst-italic">
               Inland Transportation
 Cover your end-to-end logistics with Inland Transportation
 
-Inland transportation is a key partner to ocean freight and with Fortune Express, you get access to a range of quality intermodal services – whether truck, rail or barge. Find the right transport mode for your cargo and let us handle the rest.
+Inland transportation is a key partner to ocean freight and with UpFront Xpress, you get access to a range of quality intermodal services – whether truck, rail or barge. Find the right transport mode for your cargo and let us handle the rest.
             </p>
           </div>
         </div>
@@ -184,7 +184,7 @@ Inland transportation is a key partner to ocean freight and with Fortune Express
 
         <div class="section-title" data-aos="fade-up">
           <h2><strong>Our</strong>  <strong>Dedicated</strong><strong> Team</strong></h2>
-          <p>Fortune Express is a Shipping Company Enterprise that positions ourselves as an extension of their clients' Cargo transportation to their various destinations with ease. For that reason, we showcase the people on their staff to highlight the humans behind those wonderful achievements.</p>
+          <p>UpFront Xpress is a Shipping Company Enterprise that positions ourselves as an extension of their clients' Cargo transportation to their various destinations with ease. For that reason, we showcase the people on their staff to highlight the humans behind those wonderful achievements.</p>
         </div>
 
         <div class="row">
@@ -293,6 +293,11 @@ Inland transportation is a key partner to ocean freight and with Fortune Express
 <i class="far fa-envelope"></i>
           <input type="text" placeholder="Email" name="email" required/>
          </div>
+
+          <div class="input-cnt">
+            <i class="far fa-envelope"></i>
+            <input type="text" placeholder="Subject" name="subject" />
+          </div>
          
          <div class="input-cnt">
 <i class="far fa-envelope"></i>
@@ -489,11 +494,11 @@ Inland transportation is a key partner to ocean freight and with Fortune Express
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Fortune Express</h3>
+            <h3>UpFront Xpress </h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Dnata City Unit 1 <br>
+                Stanwell, Staines TW19 7LN, <br> United Kingdom
+              <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> brightjunior475@gmail.com<br>
             </p>
@@ -537,14 +542,14 @@ Inland transportation is a key partner to ocean freight and with Fortune Express
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fortune Express Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>UpFront Xpress Logistic</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="index.html">FortuneExpressICT</a>
+          Designed by <a href="index.html">UpFrontXpressICT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
