--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fortune Express | Global Shipping Company</title>
+  <title>UpFront Xpress | Global Logistic Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>Fortune</span> Express</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>Upfront</span> Xpress</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -129,11 +129,10 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Company</h3>
+            <h3>UpFront Xpress</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Dnata City Unit 1 <br>
+              Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> brightjunior475@gmail.com<br>
             </p>
@@ -177,14 +176,14 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fortune Express Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>UpFront Xpress Logistic</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="index.html">FortuneExpressICT</a>
+          Designed by <a href="index.html">UpFrontXpressICT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
