--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fortune Express | Global Shipping Company</title>
+  <title>UpFront Xpresss | Global Logistic Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>FORTUNE</span> EXPRESS</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -107,18 +107,18 @@
     <div class="homedelivery">
       <h3>HOME DELIVERY</h3>
 <img src="home delivery3.jpeg" alt="home delivery">
-<P><span style="font-size: 30px;">S</span>ince its founding, Fortune Express Enterprise has been one of the most trusted names in the industry. Hire us for this service and learn how we cater to the needs of each client, ensuring the results you need and deserve.</p>
+<P><span style="font-size: 30px;">S</span>ince its founding, UpFront Xpress Logistic has been one of the most trusted names in the industry. Hire us for this service and learn how we cater to the needs of each client, ensuring the results you need and deserve.</p>
   </P>
     </div>
     <div class="customs">
 <h3>CUSTOMS CLEARANCE</h3>
 <img src="port3.jpg" alt="home delivery">
-      <p><span style="font-size: 40px;">W</span>​e have the experience and skills necessary to tackle just about every type of job that comes our way. With Fortune Express Enterprise, clients know exactly what to expect - professionalism, efficiency and exceptional results.</p>
+      <p><span style="font-size: 40px;">W</span>​e have the experience and skills necessary to tackle just about every type of job that comes our way. With UpFront Xpress Logistic, clients know exactly what to expect - professionalism, efficiency and exceptional results.</p>
     </div> <br><br>
     <div class="marine">
       <h3>MARINE INSUARANCE</h3> 
  <img src="company-project3.jpg" alt="">
-      <p>​<span style="font-size: 40px;">F</span>ortune Express Enterprise is committed to getting the job done, especially when it comes to this service. You can count on us to be professional, timely, efficient and make sure you’re satisfied every step of the way.</p>
+      <p>​<span style="font-size: 40px;">U</span>pFront Xpress Logistic is committed to getting the job done, especially when it comes to this service. You can count on us to be professional, timely, efficient and make sure you’re satisfied every step of the way.</p>
    </div>
     </div>
     <!-- End Services Section -->
@@ -135,11 +135,10 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Fortune Express</h3>
+            <h3>UpFront Xpress</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Dnata City Unit 1 <br>
+              Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> brightjunior475@gmail.com<br>
             </p>
@@ -183,14 +182,14 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fortune Express Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>UpFront Xpress Logistic</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="index.html">FortuneExpressICT</a>
+          Designed by <a href="index.html">UpFrontXpressICT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
