--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fortune Express | Global Shipping Company</title>
+  <title>UpFront Xpress | Global Logistic Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><span>FORTUNE</span> EXPRESS</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -58,9 +58,9 @@
               <li><a href="testimonials.html">Testimonials</a></li>
               <li class="dropdown"><a href="#"><span>Professional Services</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                   <li><a href="#">Home Delivery</a></li>
-                  <li><a href="#">Customs Clearance</a></li>
-                  <li><a href="#">Marine Insuarance</a></li>
+                   <li><a href="services.html">Home Delivery</a></li>
+                  <li><a href="services.html">Customs Clearance</a></li>
+                  <li><a href="services.html">Marine Insuarance</a></li>
                 </ul>
               </li>
             </ul>
@@ -108,7 +108,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Our <strong>Dedicated</strong><strong> Team</strong> </h2>
-          <p>Fortune Express is a Shipping Company Enterprise that positions ourselves as an extension of their clients' Cargo transportation to their various destinations with ease. For that reason, we showcase the people on their staff to highlight the humans behind those wonderful achievements.</p>
+          <p>UpFront Xpress is a Shipping Company Logistic that positions itself as an extension of their clients' Cargo transportation to their various destinations with ease. For that reason, we showcase the people on their staff to highlight the humans behind those wonderful achievements.</p>
         </div>
 
         <div class="row">
@@ -200,11 +200,10 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Fortune Express</h3>
+            <h3>UpFront Xpress</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Dnata City Unit 1 <br>
+              Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> brightjunior475@gmail.com<br>
             </p>
@@ -248,14 +247,14 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fortune Express Enterprise</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>UpFront Xpress Logistic</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="index.html">FortuneExpressICT</a>
+          Designed by <a href="index.html">UpFrontXpressICT</a>
 
         </div>
       </div>
