--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
-      
+
       <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -282,7 +282,7 @@ Inland transportation is a key partner to ocean freight and with UpFront Xpress,
   </div>
    <div class="form-container">
 
-      <form action="#" method="POST">
+      <form action="contact.php" method="POST">
       	
          <div class="input-cnt">
 <i class="fas fa-user"></i>
@@ -310,7 +310,7 @@ Inland transportation is a key partner to ocean freight and with UpFront Xpress,
   </div>
 
          <div class="input-cnt">
-            <input type="submit" />
+            <input type="submit" name="submit"/>
          </div>
          <div>
          </div>
@@ -499,8 +499,9 @@ Inland transportation is a key partner to ocean freight and with UpFront Xpress,
               Dnata City Unit 1 <br>
                 Stanwell, Staines TW19 7LN, <br> United Kingdom
               <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> brightjunior475@gmail.com<br>
+              <strong>Phone:</strong> +44 7451 2810 02<br>
+              <strong>Email:</strong> admin@upfrontxpress.com<br>
+              <strong>Email:</strong> support@upfrontxpress.com<br>
             </p>
           </div>
 
