--- a/testimonials.html
+++ b/testimonials.html
@@ -57,9 +57,9 @@
               <li><a href="testimonials.html" class="active">Testimonials</a></li>
               <li class="dropdown"><a href="#"><span>Professional Services</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                   <li><a href="#">Home Delivery</a></li>
-                  <li><a href="#">Customs Clearance</a></li>
-                  <li><a href="#">Marine Insuarance</a></li>
+                   <li><a href="services.html">Home Delivery</a></li>
+                  <li><a href="services.html">Customs Clearance</a></li>
+                  <li><a href="services.html">Marine Insuarance</a></li>
                 </ul>
               </li>
             </ul>
@@ -205,8 +205,9 @@ The UpFront Xpress platform is easy to use. Looking at the entire process from p
             <p>
               Dnata City Unit 1 <br>
               Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> brightjunior475@gmail.com<br>
+              <strong>Phone:</strong> +44 7451 2810 02<br>
+              <strong>Email:</strong> admin@upfrontxpress.com<br>
+              <strong>Email:</strong> support@upfrontxpress.com<br>
             </p>
           </div>
 
