--- a/about.html
+++ b/about.html
@@ -354,8 +354,9 @@ Inland transportation is a key partner to ocean freight and with UpFront Xpress,
             <p>
               Dnata City Unit 1 <br>
               Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> brightjunior475@gmail.com<br>
+              <strong>Phone:</strong> +44 7451 2810 02<br>
+              <strong>Email:</strong> admin@upfrontxpress.com<br>
+              <strong>Email:</strong> support@upfrontxpress.com<br>
             </p>
           </div>
 
