--- a/blog.html
+++ b/blog.html
@@ -335,8 +335,9 @@ As customers have asked us what the Suez Canal incident means for their logistic
             <p>
               Dnata City Unit 1 <br>
               Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> brightjunior475@gmail.com<br>
+              <strong>Phone:</strong> +44 7451 2810 02<br>
+              <strong>Email:</strong> admin@upfrontxpress.com<br>
+              <strong>Email:</strong> support@upfrontxpress.com<br>
             </p>
           </div>
 
