--- a/contact.html
+++ b/contact.html
@@ -129,13 +129,14 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>brightjunior475@gmail.com<br>brightjunior475@gmail.com</p>
+                  <strong>Email:</strong> admin@upfrontxpress.com<br>
+                  <strong>Email:</strong> support@upfrontxpress.com<br>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <p>+44 7451 2810 02</p>
                 </div>
               </div>
             </div>
@@ -146,7 +147,7 @@
 
         <div class="row mt-5 justify-content-center" data-aos="fade-up">
           <div class="col-lg-10">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -166,7 +167,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit" name="submit">Send Message</button></div>
             </form>
           </div>
 
@@ -189,8 +190,9 @@
             <p>
               Dnata City Unit 1 <br>
               Stanwell, Staines TW19 7LN, <br> United Kingdom <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> brightjunior475@gmail.com<br>
+              <strong>Phone:</strong> +44 7451 2810 02<br>
+              <strong>Email:</strong> admin@upfrontxpress.com<br>
+              <strong>Email:</strong> support@upfrontxpress.com<br>
             </p>
           </div>
 
