--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header" class="fixed-top" style="background-color: whitesmoke;">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html"><span>Upfront</span> Xpress</a></h1>
@@ -67,7 +67,7 @@
           </li>
 
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Track and Monitor</a></li>
+          <li><a href="trackorder.html">Track and Monitor</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
 
@@ -367,7 +367,7 @@ Inland transportation is a key partner to ocean freight and with UpFront Xpress,
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Shipment tracking</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="trackorder.html">Shipment tracking</a></li>
             </ul>
           </div>
 
