--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header" class="fixed-top" style="background-color: whitesmoke;">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
@@ -69,7 +69,7 @@
           </li>
 
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Track and Monitor</a></li>
+          <li><a href="trackorder.html">Track and Monitor</a></li>
           <li><a href="blog.html" class="active">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
 
@@ -348,7 +348,7 @@ As customers have asked us what the Suez Canal incident means for their logistic
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Shipment tracking</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="trackorder.html">Shipment tracking</a></li>
             </ul>
           </div>
 
