--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <!-- Favicons -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-<link rel="stylesheet" href="contactform.css">
+<link rel="stylesheet" href="tracking.css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -36,12 +36,24 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+    .text-center>button {
+      background-color: rgba(38, 160, 38, 0.938);
+      color: white;
+      border: none;
+      padding: 10px;
+    }
+  
+    .text-center>button:hover {
+      background-color: rgba(73, 207, 73, 0.986);
+    }
+  </style>
 </head>
 
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header" class="fixed-top" style="background-color: whitesmoke;">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
@@ -69,7 +81,7 @@
           </li>
 
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Track and Monitor</a></li>
+          <li><a href="trackorder.html">Track and Monitor</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
 
@@ -147,7 +159,7 @@
 
         <div class="row mt-5 justify-content-center" data-aos="fade-up">
           <div class="col-lg-10">
-            <form action="contact.php" method="post" role="form" class="php-email-form">
+            <form action="contact.php" method="POST" role="form" >
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -162,11 +174,7 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
+              <br>
               <div class="text-center"><button type="submit" name="submit">Send Message</button></div>
             </form>
           </div>
@@ -203,7 +211,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Shipment tracking</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="trackorder.html">Shipment tracking</a></li>
             </ul>
           </div>
 
