--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header" class="fixed-top" style="background-color: whitesmoke;">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html"><span>UPFRONT</span> XPRESS</a></h1>
@@ -59,16 +59,16 @@
               <li><a href="testimonials.html">Testimonials</a></li>
               <li class="dropdown"><a href="#"><span>Professional Services</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                   <li><a href="#">Home Delivery</a></li>
-                  <li><a href="#">Customs Clearance</a></li>
-                  <li><a href="#">Marine Insuarance</a></li>
+                   <li><a href="services.html">Home Delivery</a></li>
+                  <li><a href="services.html">Customs Clearance</a></li>
+                  <li><a href="services.html">Marine Insuarance</a></li>
                 </ul>
               </li>
             </ul>
           </li>
 
           <li><a href="services.html" class="active">Services</a></li>
-          <li><a href="portfolio.html">Track and Monitor</a></li>
+          <li><a href="trackorder.html">Track and Monitor</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
 
@@ -152,7 +152,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Shipment tracking</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="trackorder.html">Shipment tracking</a></li>
             </ul>
           </div>
 
